# nsefeed

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISH_TO_PYPI.md  README.md  pyproject.toml  test_nsefeed_functionality.py
.claude/: settings.local.json
assets/: quickstart.md
examples/: basic_usage.py  bulk_download.py  monte_carlo_example.py
nsefeed/: __init__.py  cache.py  config.py  constants.py  exceptions.py  logger.py  py.typed  session.py  ticker.py  utils.py
nsefeed/data/: indices.json
nsefeed/derivatives/: __init__.py  derivative_data.py  get_func.py
nsefeed/equity/: __init__.py  equity_data.py  get_func.py
nsefeed/indices/: __init__.py  config.py  index_data.py
nsefeed/scrapers/: __init__.py  bhav_copy.py
tests/: __init__.py  test_cache.py  test_session.py  test_ticker.py  test_utils.py
