[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsefeed"
version = "1.0.2"
description = "Minimal python library for ingesting historical NSE India data - Indices, Equity, and Derivatives with yfinance-style API"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Shubham Nayak", email = "shubhamnayaksn1708@gmail.com"}
]
maintainers = [
    {name = "Shubham Nayak", email = "shubhamnayaksn1708@gmail.com"}
]
keywords = [
    "nse",
    "nseindia",
    "stock",
    "market",
    "finance",
    "india",
    "trading",
    "stocks",
    "equities",
    "nifty",
    "sensex",
    "bhavcopy",
    "ohlc",
    "historical-data",
    "derivatives",
    "options",
    "futures",
    "capital-market",
    "yfinance",
    "data-ingestion",
    "market-data",
    "financial-data"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]
all = [
    "nsefeed[dev]",
]

[project.urls]
Homepage = "https://github.com/shubhamnayak1708/nsefeed"
Documentation = "https://github.com/shubhamnayak1708/nsefeed#readme"
Repository = "https://github.com/shubhamnayak1708/nsefeed.git"
Issues = "https://github.com/shubhamnayak1708/nsefeed/issues"
Changelog = "https://github.com/shubhamnayak1708/nsefeed/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["nsefeed*"]

[tool.setuptools.package-data]
nsefeed = ["data/*.json"]

[tool.setuptools]
include-package-data = true

# Include README and logo files in distribution
[tool.setuptools.exclude-package-data]
"*" = ["test_*.py", "tmp.py", "research_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["nsefeed"]
skip = [".venv", "venv", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pandas.*", "requests.*", "dateutil.*"]
ignore_missing_imports = true
